--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,22 @@
 
 /* Your CSS Code here. */
+.holder
+{
+    display: flex;
+    flex-wrap: wrap;
+    
+    justify-content: center;
+}
+.box
+{
+    
+    width: 100px;
+    height: 100px;
+    display: flex;
+   
+    align-items: center;
+    justify-content: center;
+    
+   
+
+}
